[package]
name = "ofborg"
version = "0.1.9"
authors = ["Graham Christensen <graham@grahamc.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
async-std = { version = "=1.12.0", features = ["unstable"] }
chrono = "0.4.22"
either = "1.8.0"
fs2 = "0.4.3"
futures-util = "0.3.25"
hubcaps = { git = "https://github.com/grahamc/hubcaps.git" }
#hubcaps = { path = "../../../grahamc/hubcaps/" } # for testing patches
# to upgrade hyper, hubcaps has to be updated too
# newer hyper has hyper::StatusCode while hubcaps returns a hyper::status::StatusCode
hyper = "=0.10.*"
hyper-native-tls = "0.3.0"
lapin = "1.10.0"
lru-cache = "0.1.2"
md5 = "0.7.0"
nom = "4.2.3"
regex = "1.7.0"
separator = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sys-info = "0.9.1"
tempfile = "3.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
uuid = { version = "0.4", features = ["v4"] }
