[package]
name = "ofborg"
version = "0.1.9"
authors = ["Graham Christensen <graham@grahamc.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
async-std = { version = "=1.12.0", features = ["unstable"] }
chrono = "0.4.22"
either = "1.8.0"
fs2 = "0.4.3"
futures-util = "0.3.25"
#hubcaps = "0.6"
# for Conclusion::Skipped which is in master
hubcaps = { git = "https://github.com/softprops/hubcaps.git", rev = "d60d157b6638760fc725b2e4e4f329a4ec6b901e" }
# hyper = { version = "0.14", features = ["full"] }
hyper = "=0.14.*"
# maybe can be removed when hyper is updated
http = "0.2"
lapin = "2.1.1"
lru-cache = "0.1.2"
md5 = "0.7.0"
nom = "4.2.3"
regex = "1.7.0"
separator = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sys-info = "0.9.1"
tempfile = "3.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
uuid = { version = "1.2", features = ["v4"] }
